fixed menu overlapping

--- a/client/src/navigation/styles/navbar.css
+++ b/client/src/navigation/styles/navbar.css
@@ -6,6 +6,7 @@
     left: 0;
     width: 100%;
     height: 4rem;
+    z-index: 9999;
 }
 
 .nav_container {
@@ -21,7 +22,7 @@
     transform: translateX(250%);
     transition: transform 1.5s cubic-bezier(0.52, 0.34, 0.25, 1.2);
     position: relative;
-    z-index: 100;
+    z-index: 9999;
     border-radius: 10%;
     
 }
@@ -58,7 +59,7 @@
     cursor: pointer;
     transition: transform 0.5s ease-in-out;
     font-size: 0.7rem;
-    z-index:105;
+    z-index:9999;
 }
 
 .menu_btn:hover {
